--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "react-router-dom": "^6.14.2"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.5",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.2",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@supabase/supabase-js": "^2.31.0",
+    "react-router-dom": "^6.14.2",
+    "styled-components": "^5.3.11"
   }
 }
