--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mui/material": "^5.14.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "@supabase/supabase-js": "^2.31.0",
+    "fuse.js": "^6.6.2",
     "react-router-dom": "^6.14.2",
     "styled-components": "^5.3.11"
   }
