--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/supabase-js": "^2.31.0",
     "fuse.js": "^6.6.2",
     "react-router-dom": "^6.14.2",
