--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/supabase-js": "^2.31.0",
+    "axios": "^1.4.0",
     "fuse.js": "^6.6.2",
     "react-router-dom": "^6.14.2",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "swiper": "^10.1.0"
   }
 }
