--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.4.0",
     "fuse.js": "^6.6.2",
     "react-router-dom": "^6.14.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.11",
     "swiper": "^10.1.0"
   }
